--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "docker-php/docker-php-api",
+    "name": "bain2018/dockerphpapi",
     "license": "MIT",
     "type": "library",
     "description": "Docker API generated files from OpenAPI Specification",
@@ -9,14 +9,13 @@
         }
     },
     "require": {
-        "php": ">=7.1",
-        "jane-php/open-api-runtime": "^4.0"
+        "php": ">=8.0",
+        "jane-php/open-api-runtime": "^v7.2.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0",
         "friendsofphp/php-cs-fixer": "^2.9",
-        "jane-php/open-api": "^4.0",
-        "jane-php/json-schema": "^4.0",
+        "jane-php/open-api-3": "^v7.2.2",
+        "jane-php/json-schema": "^v7.2.2",
         "amphp/artax": "^3.0"
     },
     "suggest": {
